--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="card">
+    <main class="card" role="main">
       <div class="card-top">
         <img
           class="card-top__avatar"
@@ -43,14 +43,14 @@
         <button class="card-socials__socialBtn" type="button">Twitter</button>
         <button class="card-socials__socialBtn" type="button">Instagram</button>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://github.com/muzakryder2" target="_blank">Muzakryder2</a>.
-    </div>
+    </footer>
   </body>
 </html>
